# FacetX

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REBUILD.md  pyproject.toml
app/: .gitignore  FacetX.entitlements  Info.plist  Package.resolved  Package.swift  build-app.sh  make-dmg.sh
app/Checks/FacetXCoreChecks/: main.swift
app/Checks/FacetXDataChecks/: main.swift
app/Resources/: DocsBot.icns  FacetX.icns
app/Resources/MarkdownPreview/: bundle.css  index.html
app/Resources/NoteEditor/: bundle.css  bundle.js
app/Resources/NotePreview/: bundle.css  bundle.js
app/Sources/DocsBot/: AppSettings.swift  ContentView.swift  CreateItemView.swift  DeclareProjectView.swift  DocsBotApp.swift  EventKitService.swift  Models.swift  QuickCaptureView.swift  Settings.swift  SettingsScene.swift  SettingsView.swift
app/Sources/FacetX/: AppSettings.swift  AppSupport.swift  CommitsView.swift  ContentView.swift  CreateItemView.swift  EditItemView.swift  EventKitService.swift  FacetTheme.swift  (+17 more)
docs/: ARCHITECTURE.md  BUILDING.md  RELEASE.md  VELLUMX_REFERENCE.md
experiments/eventkit-probe/: app-main.swift  build-app.sh  probe.swift
legacy/: README.legacy.md  README.md
legacy/templates/: app.js  index.html
legacy/tests/: conftest.py  test_server.py
scripts/: build-env.sh  build.sh  check.sh  clean.sh  log.sh  package-dmg.sh  restart.sh
scripts/lib/: facetx-build.sh
src/docsbot/: cli.py  config.py  db.py  server.py
templates/: app.js  index.html  style.css
tests/: test_config.py  test_db.py  test_notes.py
web/note-editor/: build.mjs  package.json
(+156 files in other folders)
